# dyros_robot_controller

./: .gitignore  404.html  CMakeLists.txt  NOTICE  README.md  index.html  mkdocs.yml  package.xml  sitemap.xml
.github/workflows/: docs.yml
api/cpp/: index.html
api/python/: index.html
cmake/: dyros_robot_controllerConfig.cmake.in
concepts/controller-architecture/: index.html
concepts/joint-space-control/: index.html
concepts/qp-and-hqp/: index.html
concepts/task-space-control/: index.html
contributing/docs-workflow/: index.html
docs/: index.md
docs/api/: cpp.md  python.md
docs/concepts/: controller-architecture.md  joint-space-control.md  qp-and-hqp.md  task-space-control.md
docs/contributing/: docs-workflow.md
docs/examples/: fr3-xls.md  fr3.md  overview.md
docs/getting-started/: build-and-run.md  installation.md
drc/: __init__.py  type_define.py
drc/manipulator/: robot_controller.py  robot_data.py
drc/mobile/: robot_controller.py  robot_data.py
drc/mobile_manipulator/: __init__.py  _proxy.py  robot_controller.py  robot_data.py
examples/C++/: CMakeLists.txt
examples/fr3/: index.html
examples/fr3-xls/: index.html
examples/overview/: index.html
examples/python/: dyros_robot_controller_example.py  fr3_controller.py  fr3_xls_controller.py  mujoco_bridge.py  xls_controller.py
getting-started/build-and-run/: index.html
getting-started/installation/: index.html
include/: math_type_define.h  suhan_benchmark.h
include/dyros_robot_controller/: QP_base.h  type_define.h
search/: search_index.json
src/: bindings.cpp
(+37 files in other folders)
