<package format="2">
  <name>dyros_robot_controller</name>
  <version>0.3.0</version>
  <description>Robot controller with C++ and Python interface.</description>
  <maintainer email="yoonjh98@snu.ac.kr">Yoon Junheon</maintainer>
  <license>Apache License 2.0</license>

  <!--  Buildtool  -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!--  Third-party libraries  -->
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <depend>OsqpEigen</depend>
  <depend>eigenpy</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
